add table with top univariate features

--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,24 @@
   publisher    = {Proceedings of the National Academy of Sciences}
 }
 
+@Article{Schaid_2018,
+  author       = {Schaid, Daniel J. and Chen, Wenan and Larson,
+                  Nicholas B.},
+  title        = {From genome-wide associations to candidate causal
+                  variants by statistical fine-mapping},
+  year         = 2018,
+  volume       = 19,
+  number       = 8,
+  month        = {May},
+  pages        = {491–504},
+  issn         = {1471-0064},
+  doi          = {10.1038/s41576-018-0016-z},
+  url          = {http://dx.doi.org/10.1038/s41576-018-0016-z},
+  journal      = {Nature Reviews Genetics},
+  publisher    = {Springer Science and Business Media LLC}
+}
+
+
 
 @Article{humgenref,
   title        = {A global reference for human genetic variation},
