--- a/dissertation.tex
+++ b/dissertation.tex
@@ -7,6 +7,10 @@
 \usepackage{graphicx}
 
 \usepackage[normalem]{ulem}
+\renewcommand\theadalign{bc}
+\renewcommand\theadfont{\bfseries}
+\renewcommand\theadgape{\Gape[4pt]}
+\renewcommand\cellgape{\Gape[4pt]}
 \usepackage{textcomp}
 \usepackage{etoolbox}
 \AtBeginEnvironment{quote}{\singlespace\vspace{-\topsep}\small}
