--- a/dissertation.tex
+++ b/dissertation.tex
@@ -6,7 +6,9 @@
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
 \usepackage[normalem]{ulem}
-
+\usepackage{fourier} 
+\usepackage{array}
+\usepackage{makecell}
 \renewcommand\theadalign{bc}
 \renewcommand\theadfont{\bfseries}
 \renewcommand\theadgape{\Gape[4pt]}
