more editing for fgem

--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,39 @@
   publisher    = {Proceedings of the National Academy of Sciences}
 }
 
+@Article{Derrien_2012,
+  author       = {Derrien, Thomas and Estellé, Jordi and Marco Sola,
+                  Santiago and Knowles, David G. and Raineri, Emanuele
+                  and Guigó, Roderic and Ribeca, Paolo},
+  title        = {Fast Computation and Applications of Genome
+                  Mappability},
+  year         = 2012,
+  editor       = {Ouzounis, Christos A.Editor},
+  volume       = 7,
+  number       = 1,
+  month        = {Jan},
+  pages        = {e30377},
+  issn         = {1932-6203},
+  doi          = {10.1371/journal.pone.0030377},
+  url          = {http://dx.doi.org/10.1371/journal.pone.0030377},
+  journal      = {PLoS ONE},
+  publisher    = {Public Library of Science (PLoS)}
+}
+
+
+
+@Misc{drivermapsblacklist,
+  author       = {{Siming Zhao}},
+  title        = {driverMAPS run results for 20 tumor types from TCGA},
+  year         = 2019,
+  doi          = {10.5281/ZENODO.3485211},
+  url          = {https://zenodo.org/record/3485211},
+  publisher    = {Zenodo},
+  copyright    = {Creative Commons Attribution 4.0 International}
+}
+
+
+
 @Article{Schaid_2018,
   author       = {Schaid, Daniel J. and Chen, Wenan and Larson,
                   Nicholas B.},
@@ -708,6 +741,21 @@
   url          = {http://dx.doi.org/10.1038/nprot.2008.211},
   journal      = {Nature Protocols},
   publisher    = {Springer Science and Business Media LLC}
+}
+
+@Article{Hanahan_2011,
+  author       = {Hanahan, Douglas and Weinberg, Robert A.},
+  title        = {Hallmarks of Cancer: The Next Generation},
+  year         = 2011,
+  volume       = 144,
+  number       = 5,
+  month        = {Mar},
+  pages        = {646–674},
+  issn         = {0092-8674},
+  doi          = {10.1016/j.cell.2011.02.013},
+  url          = {http://dx.doi.org/10.1016/j.cell.2011.02.013},
+  journal      = {Cell},
+  publisher    = {Elsevier BV}
 }
 
 
