drop hyperref to fix formatting

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -20,7 +20,7 @@
 
 \usepackage{siunitx}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{e}}}
-\usepackage{hyperref}
+%%\usepackage{hyperref}
 \title{On estimating the genetic basis of complex traits and their molecular intermediates}
 \author{Nicholas Wilson Knoblauch}
 \department{Genetics}
@@ -41,7 +41,7 @@
 %\omittitle
 
 % These lines can be commented out to disable the copyright/dedication/epigraph pages
-\makecopyright
+%\makecopyright
 %\makededication
 %\makeepigraph
 
