--- a/references.bib
+++ b/references.bib
@@ -442,8 +442,7 @@
                   GDAC Firehose stddata__2015_06_01 run},
   year         = 2015,
   doi          = {10.7908/C1251HBG},
-  url          =
-                  {http://gdac.broadinstitute.org/runs/stddata__2015_06_01/data},
+  url          = {http://gdac.broadinstitute.org/runs/stddata__2015_06_01/data},
   publisher    = {Broad Institute of MIT and Harvard}
 }
 
