Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -435,14 +435,12 @@
 }
 
 
-
 @Misc{TCGA,
   author       = {{Broad Institute TCGA Genome Data Analysis Center}},
   title        = {Analysis-ready standardized TCGA data from Broad
-                  GDAC Firehose stddata__2015_06_01 run},
+                  GDAC Firehose stddata 2015 06 01 run},
   year         = 2015,
   doi          = {10.7908/C1251HBG},
-  url          = {http://gdac.broadinstitute.org/runs/stddata__2015_06_01/data},
   publisher    = {Broad Institute of MIT and Harvard}
 }
 
