Actually update RSSp...

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -15,6 +15,12 @@
 \renewcommand\cellgape{\Gape[4pt]}
 \usepackage{textcomp}
 \usepackage{etoolbox}
+
+\usepackage{unicode-math}
+\setmainfont{Latin Modern Roman}
+\setmathfont{Latin Modern Math}
+
+
 \AtBeginEnvironment{quote}{\singlespace\vspace{-\topsep}\small}
 \AtEndEnvironment{quote}{\vspace{-\topsep}\endsinglespace}
 
