--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,12 @@
+@article{fisher19301918,
+  title={A, 1918 The correlation between relatives on the supposition of Mendelian inheritance},
+  author={Fisher, R},
+  journal={Trans. Roy. Soc., Edinb},
+  volume={52},
+  pages={399--433},
+  year={1930}
+}
+
 @Article{Subramanian_2005,
   author       = {Subramanian, A. and Tamayo, P. and Mootha, V. K. and
                   Mukherjee, S. and Ebert, B. L. and Gillette,
@@ -285,6 +294,50 @@
   journal      = {SIAM Journal on Scientific Computing},
   publisher    = {Society for Industrial & Applied Mathematics (SIAM)}
 }
+
+@article{phewas,
+  title={Unravelling the human genome--phenome relationship using phenome-wide association studies},
+  author={Bush, William S and Oetjens, Matthew T and Crawford, Dana C},
+  journal={Nature Reviews Genetics},
+  volume={17},
+  number={3},
+  pages={129},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@Article{Rosenberg_2010,
+  author       = {Rosenberg, Noah A. and Huang, Lucy and Jewett, Ethan
+                  M. and Szpiech, Zachary A. and Jankovic, Ivana and
+                  Boehnke, Michael},
+  title        = {Genome-wide association studies in diverse
+                  populations},
+  year         = 2010,
+  volume       = 11,
+  number       = 5,
+  month        = {May},
+  pages        = {356–366},
+  issn         = {1471-0064},
+  doi          = {10.1038/nrg2760},
+  url          = {http://dx.doi.org/10.1038/nrg2760},
+  journal      = {Nature Reviews Genetics},
+  publisher    = {Springer Science and Business Media LLC}
+}
+
+
+
+@article{firstGWAS,
+  title={Functional SNPs in the lymphotoxin-$\alpha$ gene that are associated with susceptibility to myocardial infarction},
+  author={Ozaki, Kouichi and Ohnishi, Yozo and Iida, Aritoshi and Sekine, Akihiko and Yamada, Ryo and Tsunoda, Tatsuhiko and Sato, Hiroshi and Sato, Hideyuki and Hori, Masatsugu and Nakamura, Yusuke and others},
+  journal={Nature genetics},
+  volume={32},
+  number={4},
+  pages={650--654},
+  year={2002},
+  publisher={Nature Publishing Group}
+}
+
+
 
 @Article{ldsc,
   author       = {Bulik-Sullivan, Brendan K and Loh, Po-Ru and
