added AF image (plot)?

--- a/references.bib
+++ b/references.bib
@@ -7,6 +7,29 @@
   year={1930}
 }
 
+
+@Article{Hou_2019,
+  author       = {Hou, Kangcheng and Burch, Kathryn S. and Majumdar,
+                  Arunabha and Shi, Huwenbo and Mancuso, Nicholas and
+                  Wu, Yue and Sankararaman, Sriram and Pasaniuc,
+                  Bogdan},
+  title        = {Accurate estimation of SNP-heritability from
+                  biobank-scale data irrespective of genetic
+                  architecture},
+  year         = 2019,
+  volume       = 51,
+  number       = 8,
+  month        = {Jul},
+  pages        = {1244–1251},
+  issn         = {1546-1718},
+  doi          = {10.1038/s41588-019-0465-0},
+  url          = {http://dx.doi.org/10.1038/s41588-019-0465-0},
+  journal      = {Nature Genetics},
+  publisher    = {Springer Science and Business Media LLC}
+}
+
+
+
 @Article{Subramanian_2005,
   author       = {Subramanian, A. and Tamayo, P. and Mootha, V. K. and
                   Mukherjee, S. and Ebert, B. L. and Gillette,
