more genes from FGEM

--- a/references.bib
+++ b/references.bib
@@ -28,6 +28,22 @@
   publisher    = {Springer Science and Business Media LLC}
 }
 
+@Article{Pylayeva_Gupta_2011,
+  author       = {Pylayeva-Gupta, Yuliya and Grabocka, Elda and
+                  Bar-Sagi, Dafna},
+  title        = {RAS oncogenes: weaving a tumorigenic web},
+  year         = 2011,
+  volume       = 11,
+  number       = 11,
+  month        = {Oct},
+  pages        = {761–774},
+  issn         = {1474-1768},
+  doi          = {10.1038/nrc3106},
+  url          = {http://dx.doi.org/10.1038/nrc3106},
+  journal      = {Nature Reviews Cancer},
+  publisher    = {Springer Science and Business Media LLC}
+}
+
 
 
 @Article{Subramanian_2005,
@@ -870,6 +886,75 @@
   publisher    = {Springer Science and Business Media LLC}
 }
 
+@Article{philly,
+  year         = 1960,
+  volume       = 132,
+  number       = 3438,
+  month        = {Nov},
+  pages        = {1488–1501},
+  issn         = {1095-9203},
+  doi          = {10.1126/science.132.3438.1488},
+  url          = {http://dx.doi.org/10.1126/science.132.3438.1488},
+  journal      = {Science},
+  publisher    = {American Association for the Advancement of Science
+                  (AAAS)}
+}
+
+
+
+@Article{fusions,
+  author       = {Gao, Qingsong and Liang, Wen-Wei and Foltz, Steven
+                  M. and Mutharasu, Gnanavel and Jayasinghe, Reyka
+                  G. and Cao, Song and Liao, Wen-Wei and Reynolds,
+                  Sheila M. and Wyczalkowski, Matthew A. and Yao,
+                  Lijun and et al.},
+  title        = {Driver Fusions and Their Implications in the
+                  Development and Treatment of Human Cancers},
+  year         = 2018,
+  volume       = 23,
+  number       = 1,
+  month        = {Apr},
+  pages        = {227–238.e3},
+  issn         = {2211-1247},
+  doi          = {10.1016/j.celrep.2018.03.050},
+  url          = {http://dx.doi.org/10.1016/j.celrep.2018.03.050},
+  journal      = {Cell Reports},
+  publisher    = {Elsevier BV}
+}
+
+
+@Article{PANCAN,
+  title        = {Pan-cancer analysis of whole genomes},
+  year         = 2020,
+  volume       = 578,
+  number       = 7793,
+  month        = {Feb},
+  pages        = {82–93},
+  issn         = {1476-4687},
+  doi          = {10.1038/s41586-020-1969-6},
+  url          = {http://dx.doi.org/10.1038/s41586-020-1969-6},
+  journal      = {Nature},
+  publisher    = {Springer Science and Business Media LLC}
+}
+
+
+@Article{Massagu__2008,
+  author       = {Massagué, Joan},
+  title        = {TGFβ in Cancer},
+  year         = 2008,
+  volume       = 134,
+  number       = 2,
+  month        = {Jul},
+  pages        = {215–230},
+  issn         = {0092-8674},
+  doi          = {10.1016/j.cell.2008.07.001},
+  url          = {http://dx.doi.org/10.1016/j.cell.2008.07.001},
+  journal      = {Cell},
+  publisher    = {Elsevier BV}
+}
+
+
+
 @Article{Hanahan_2011,
   author       = {Hanahan, Douglas and Weinberg, Robert A.},
   title        = {Hallmarks of Cancer: The Next Generation},
@@ -1182,6 +1267,86 @@ pages = {738},
   doi =          {10.1097/pap.0b013e3181c66f4e},
   url =          {https://doi.org/10.1097/pap.0b013e3181c66f4e},
   DATE_ADDED =   {Sun Sep 13 21:35:58 2020},
+}
+
+@Article{Huang_2013,
+  author       = {Huang, Zaohua and Rivas, Bryan and Agoulnik,
+                  Alexander I.},
+  title        = {NOTCH1 Gain of Function in Germ Cells Causes Failure
+                  of Spermatogenesis in Male Mice},
+  year         = 2013,
+  editor       = {Lobaccaro, Jean-Marc A.Editor},
+  volume       = 8,
+  number       = 7,
+  month        = {Jul},
+  pages        = {e71213},
+  issn         = {1932-6203},
+  doi          = {10.1371/journal.pone.0071213},
+  url          = {http://dx.doi.org/10.1371/journal.pone.0071213},
+  journal      = {PLoS ONE},
+  publisher    = {Public Library of Science (PLoS)}
+}
+
+@Article{Huang_2013,
+  author       = {Huang, Zaohua and Rivas, Bryan and Agoulnik,
+                  Alexander I.},
+  title        = {NOTCH1 Gain of Function in Germ Cells Causes Failure
+                  of Spermatogenesis in Male Mice},
+  year         = 2013,
+  editor       = {Lobaccaro, Jean-Marc A.Editor},
+  volume       = 8,
+  number       = 7,
+  month        = {Jul},
+  pages        = {e71213},
+  issn         = {1932-6203},
+  doi          = {10.1371/journal.pone.0071213},
+  url          = {http://dx.doi.org/10.1371/journal.pone.0071213},
+  journal      = {PLoS ONE},
+  publisher    = {Public Library of Science (PLoS)}
+}
+
+
+
+@Article{Trotter_1997,
+  author       = {Trotter, Martin J. and Tang, Liren and Tron, Victor
+                  A.},
+  title        = {Overexpression of the cyclin-dependent kinase
+                  inhibitor p21WAF1/GIP1in human cutaneous malignant
+                  melanoma},
+  year         = 1997,
+  volume       = 24,
+  number       = 5,
+  month        = {May},
+  pages        = {265–271},
+  issn         = {0303-6987},
+  doi          = {10.1111/j.1600-0560.1997.tb00790.x},
+  url          =
+                  {http://dx.doi.org/10.1111/j.1600-0560.1997.tb00790.x},
+  journal      = {Journal of Cutaneous Pathology},
+  publisher    = {Wiley}
+}
+
+
+
+
+@Article{Jalili_2012,
+  author       = {Jalili, Ahmad and Wagner, Christine and Pashenkov,
+                  Mikhail and Pathria, Gaurav and Mertz, Kirsten
+                  D. and Widlund, Hans R. and Lupien, Mathieu and
+                  Brunet, Jean- Philippe and Golub, Todd R. and
+                  Stingl, Georg and et al.},
+  title        = {Dual Suppression of the Cyclin-Dependent Kinase
+                  Inhibitors CDKN2C and CDKN1A in Human Melanoma},
+  year         = 2012,
+  volume       = 104,
+  number       = 21,
+  month        = {Sep},
+  pages        = {1673–1679},
+  issn         = {0027-8874},
+  doi          = {10.1093/jnci/djs373},
+  url          = {http://dx.doi.org/10.1093/jnci/djs373},
+  journal      = {JNCI: Journal of the National Cancer Institute},
+  publisher    = {Oxford University Press (OUP)}
 }
 
 
