--- a/references.bib
+++ b/references.bib
@@ -8,6 +8,7 @@
 }
 
 
+
 @Article{Hou_2019,
   author       = {Hou, Kangcheng and Burch, Kathryn S. and Majumdar,
                   Arunabha and Shi, Huwenbo and Mancuso, Nicholas and
@@ -1364,5 +1365,51 @@ pages = {738},
   doi =          {10.1038/nrc2657},
   url =          {https://doi.org/10.1038/nrc2657},
   DATE_ADDED =   {Mon Sep 14 12:54:02 2020},
+}
+
+@article{baroni19_origin_testic_germ_cell_tumor,
+  author =       {Tiziano Baroni and Iva Arato and Francesca Mancuso
+                  and Riccardo Calafiore and Giovanni Luca},
+  title =        {On the Origin of Testicular Germ Cell Tumors: From
+                  Gonocytes To Testicular Cancer},
+  journal =      {Frontiers in Endocrinology},
+  volume =       10,
+  number =       {nil},
+  pages =        {nil},
+  year =         2019,
+  doi =          {10.3389/fendo.2019.00343},
+  url =          {https://doi.org/10.3389/fendo.2019.00343},
+  DATE_ADDED =   {Sun Nov 15 13:31:10 2020},
+}
+
+@article{hayashi04_expres_failur_notch_signal_system,
+  author =       {Tetsuo Hayashi and Takumi Yamada and Yukio Kageyama
+                  and Kazunori Kihara},
+  title =        {Expression Failure of the Notch Signaling System Is
+                  Associated With the Pathogenesis of Testicular Germ
+                  Cell Tumor},
+  journal =      {Tumor Biology},
+  volume =       25,
+  number =       3,
+  pages =        {99-105},
+  year =         2004,
+  doi =          {10.1159/000079140},
+  url =          {https://doi.org/10.1159/000079140},
+  DATE_ADDED =   {Sun Nov 15 13:34:00 2020},
+}
+
+@article{huntley14_under_how_why_gene_ontol,
+  author =       {Rachael P Huntley and Tony Sawford and Maria J
+                  Martin and Claire O'Donovan},
+  title =        {Understanding How and Why the Gene Ontology and Its
+                  Annotations Evolve: the Go Within Uniprot},
+  journal =      {GigaScience},
+  volume =       3,
+  number =       1,
+  pages =        4,
+  year =         2014,
+  doi =          {10.1186/2047-217x-3-4},
+  url =          {https://doi.org/10.1186/2047-217x-3-4},
+  DATE_ADDED =   {Sun Nov 15 14:41:02 2020},
 }
 
