Updates from Overleaf

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -18,10 +18,10 @@
 \usepackage{textcomp}
 \usepackage{etoolbox}
 
-\usepackage{unicode-math}
+%\usepackage{unicode-math}
 
-\AtBeginEnvironment{quote}{\singlespace\vspace{-\topsep}\small}
-\AtEndEnvironment{quote}{\vspace{-\topsep}\endsinglespace}
+%\AtBeginEnvironment{quote}{\singlespace\vspace{-\topsep}\small}
+%\AtEndEnvironment{quote}{\vspace{-\topsep}\endsinglespace}
 
 \usepackage{siunitx}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{e}}}
@@ -42,8 +42,8 @@
 \begin{document}
 
 
-\setmainfont{Latin Modern Roman}
-\setmathfont{Latin Modern Math}
+%\setmainfont{Latin Modern Roman}
+%\setmathfont{Latin Modern Math}
 
 %% Basic setup commands
 % If you don't want a title page comment out the next line and uncomment the line after it:
