fix formatting and references

--- a/references.bib
+++ b/references.bib
@@ -117,20 +117,47 @@
   publisher    = {Springer Science and Business Media LLC}
 }
 
+@article{susie,
+  title={A simple new approach to variable selection in regression, with application to genetic fine-mapping},
+  author={Wang, Gao and Sarkar, Abhishek K and Carbonetto, Peter and Stephens, Matthew},
+  journal={bioRxiv},
+  pages={501114},
+  year={2019},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{ldetect,
+  title={Approximately independent linkage disequilibrium blocks in human populations},
+  author={Berisa, Tomaz and Pickrell, Joseph K},
+  journal={Bioinformatics},
+  volume={32},
+  number={2},
+  pages={283},
+  year={2016},
+  publisher={Oxford University Press}
+}
 
 
-@Article{humgenref,
-  title        = {A global reference for human genetic variation},
-  year         = 2015,
-  volume       = 526,
-  number       = 7571,
-  month        = {Sep},
-  pages        = {68–74},
-  issn         = {1476-4687},
-  doi          = {10.1038/nature15393},
-  url          = {http://dx.doi.org/10.1038/nature15393},
-  journal      = {Nature},
-  publisher    = {Springer Science and Business Media LLC}
+@article{torus,
+  title={Efficient integrative multi-SNP association analysis via deterministic approximation of posteriors},
+  author={Wen, Xiaoquan and Lee, Yeji and Luca, Francesca and Pique-Regi, Roger},
+  journal={The American Journal of Human Genetics},
+  volume={98},
+  number={6},
+  pages={1114--1129},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{1kg,
+  title={A global reference for human genetic variation},
+  author={1000 Genomes Project Consortium and others},
+  journal={Nature},
+  volume={526},
+  number={7571},
+  pages={68--74},
+  year={2015},
+  publisher={Nature Publishing Group}
 }
 
 @Article{Neale_2004,
@@ -184,22 +211,6 @@
   journal      = {Nature},
   publisher    = {Springer Science and Business Media LLC}
 }
-
-@Article{1kg,
-  title        = {A global reference for human genetic variation},
-  year         = 2015,
-  volume       = 526,
-  number       = 7571,
-  month        = {Sep},
-  pages        = {68–74},
-  issn         = {1476-4687},
-  doi          = {10.1038/nature15393},
-  url          = {http://dx.doi.org/10.1038/nature15393},
-  journal      = {Nature},
-  publisher    = {Springer Science and Business Media LLC}
-}
-
-
 
 @book{chambers1992statistical,
   title={Statistical Models in S},
@@ -868,8 +879,6 @@
 }
 
 
-
-
 @Article{Huang_2008,
   author       = {Huang, Da Wei and Sherman, Brad T and Lempicki,
                   Richard A},
@@ -941,7 +950,7 @@
 
 @Article{Massagu__2008,
   author       = {Massagué, Joan},
-  title        = {TGFβ in Cancer},
+  title        = {TGF$\beta$ in Cancer},
   year         = 2008,
   volume       = 134,
   number       = 2,
@@ -1096,9 +1105,10 @@ pages = {253},
   url =          {https://doi.org/10.1126/science.aan2507},
   DATE_ADDED =   {Wed May 13 10:18:38 2020},
 }
+
 @Article{TGF_Zhao_2018,
   author       = {Zhao, Ming and Mishra, Lopa and Deng, Chu-Xia},
-  title        = {The role of TGF-β/SMAD4 signaling in cancer},
+  title        = {The role of TGF-$\beta$/SMAD4 signaling in cancer},
   year         = 2018,
   volume       = 14,
   number       = 2,
