--- a/references.bib
+++ b/references.bib
@@ -8,6 +8,55 @@
 }
 
 
+@Article{Forgetta_2020,
+  author       = {Forgetta, Vincenzo and Jiang, Lai and Vulpescu,
+                  Nicholas A. and Hogan, Megan S. and Chen, Siyuan and
+                  Morris, John A. and Grinek, Stepan and Benner,
+                  Christian and McCarthy, Mark I and Fauman, Eric and
+                  et al.},
+  title        = {An Effector Index to Predict Causal Genes at GWAS
+                  Loci},
+  year         = 2020,
+  month        = {Jun},
+  doi          = {10.1101/2020.06.28.171561},
+  url          = {http://dx.doi.org/10.1101/2020.06.28.171561},
+  publisher    = {Cold Spring Harbor Laboratory}
+}
+
+@article{fine2019benchmarker,
+  title={Benchmarker: an unbiased, association-data-driven strategy to evaluate gene prioritization algorithms},
+  author={Fine, Rebecca S and Pers, Tune H and Amariuta, Tiffany and Raychaudhuri, Soumya and Hirschhorn, Joel N},
+  journal={The American Journal of Human Genetics},
+  volume={104},
+  number={6},
+  pages={1025--1039},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{sakharkar2004distributions,
+  title={Distributions of exons and introns in the human genome},
+  author={Sakharkar, Meena Kishore and Chow, Vincent TK and Kangueane, Pandjassarame},
+  journal={In silico biology},
+  volume={4},
+  number={4},
+  pages={387--393},
+  year={2004},
+  publisher={IOS press}
+}
+
+
+@article{brodie2016far,
+  title={How far from the SNP may the causative genes be?},
+  author={Brodie, Aharon and Azaria, Johnathan Roy and Ofran, Yanay},
+  journal={Nucleic acids research},
+  volume={44},
+  number={13},
+  pages={6046--6054},
+  year={2016},
+  publisher={Oxford University Press}
+}
+
 
 @Article{Hou_2019,
   author       = {Hou, Kangcheng and Burch, Kathryn S. and Majumdar,
