drop ldshrink from figure 1.

--- a/references.bib
+++ b/references.bib
@@ -34,6 +34,31 @@
   publisher={Elsevier}
 }
 
+
+@article{hapmap3,
+  title={Integrating common and rare genetic variation in diverse human populations},
+  author={International HapMap 3 Consortium and others},
+  journal={Nature},
+  volume={467},
+  number={7311},
+  pages={52},
+  year={2010},
+  publisher={Europe PMC Funders}
+}
+
+
+@book{brent1972algorithms,
+  title={Algorithms for Minimization Without Derivatives},
+  author={Brent, R.P.},
+  isbn={9780130223357},
+  lccn={78039843},
+  series={Prentice-Hall series in automatic computation},
+  url={https://books.google.com/books?id=Ee5QAAAAMAAJ},
+  year={1972},
+  publisher={Prentice-Hall}
+}
+
+
 @article{sakharkar2004distributions,
   title={Distributions of exons and introns in the human genome},
   author={Sakharkar, Meena Kishore and Chow, Vincent TK and Kangueane, Pandjassarame},
