--- a/references.bib
+++ b/references.bib
@@ -46,6 +46,18 @@
   publisher={Europe PMC Funders}
 }
 
+@article{keller2005quantifying,
+  title={Quantifying and addressing parameter indeterminacy in the classical twin design},
+  author={Keller, Matthew C and Coventry, William L},
+  journal={Twin Research and Human Genetics},
+  volume={8},
+  number={3},
+  pages={201--213},
+  year={2005},
+  publisher={Cambridge University Press}
+}
+
+
 
 @book{brent1972algorithms,
   title={Algorithms for Minimization Without Derivatives},
