--- a/references.bib
+++ b/references.bib
@@ -224,6 +224,18 @@
 }
 
 
+@article{crider2005genetic,
+  title={Genetic variation associated with preterm birth: a HuGE review},
+  author={Crider, Krista S and Whitehead, Nedra and Buus, Rebecca M},
+  journal={Genetics in Medicine},
+  volume={7},
+  number={9},
+  pages={593--604},
+  year={2005},
+  publisher={Nature Publishing Group}
+}
+
+
 @article{torus,
   title={Efficient integrative multi-SNP association analysis via deterministic approximation of posteriors},
   author={Wen, Xiaoquan and Lee, Yeji and Luca, Francesca and Pique-Regi, Roger},
