--- a/references.bib
+++ b/references.bib
@@ -8,6 +8,18 @@
 }
 
 
+@article{leder1964rna,
+  title={RNA codewords and protein synthesis, III. On the nucleotide sequence of a cysteine and a leucine RNA codeword},
+  author={Leder, Philip and Nirenberg, Marshall W},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  volume={52},
+  number={6},
+  pages={1521},
+  year={1964},
+  publisher={National Academy of Sciences}
+}
+
+
 @Article{Forgetta_2020,
   author       = {Forgetta, Vincenzo and Jiang, Lai and Vulpescu,
                   Nicholas A. and Hogan, Megan S. and Chen, Siyuan and
@@ -234,6 +246,14 @@
   year={2005},
   publisher={Nature Publishing Group}
 }
+
+@book{nussbaum2015thompson,
+  title={Thompson \& Thompson genetics in medicine e-book},
+  author={Nussbaum, Robert L and McInnes, Roderick R and Willard, Huntington F},
+  year={2015},
+  publisher={Elsevier Health Sciences}
+}
+
 
 
 @article{torus,
